# dictscope

./: README.md  pyproject.toml
src/dictscope/: index.html  render.py
