[project]
name = "dictscope"
version = "0.1.0"
description = "Universal dictionary visualizer for Python"
readme = "README.md"
authors = [
    { name = "Zidrax" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel.force-include]
"src/dictscope/index.html" = "dictscope/index.html"
