[project]
name = "dictscope"
version = "0.1.1"
description = "Universal dictionary visualizer for Python"
readme = "README.md"
authors = [
    { name = "Zidrax" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
]
